--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hyper",
-  "version": "prototype-v0.0.1",
+  "version": "beta-v0.0.1",
+  "license": "GPL-3.0-or-later",
   "description": "Enigma Virtual Machine processes instructions for interacting with liquidity pools.",
   "scripts": {
     "build": "yarn build:forge",
@@ -11,7 +12,6 @@
     "clean": "hardhat clean && forge clean && rm -f crytic-export/*",
     "coverage": "FOUNDRY_PROFILE=test forge coverage",
     "coverage:report": "FOUNDRY_PROFILE=test forge coverage --report lcov",
-    "coverage:hardhat": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "test": "FOUNDRY_PROFILE=test forge test -vvv",
     "test:hardhat": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
     "test:echidna": "FOUNDRY_PROFILE=crytic echidna-test . --config test/crytic/config.yaml",
@@ -37,8 +37,7 @@
     "solidity",
     "primitive"
   ],
-  "author": "Primitive",
-  "license": "GPL-3.0-or-later",
+  "author": "Primitive™",
   "bugs": {
     "url": "https://github.com/primitivefinance/hyper/issues"
   },
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.24",
@@ -56,7 +54,6 @@
     "evm-bn": "^1.1.1",
     "hardhat": "^2.10.2",
     "hardhat-dependency-compiler": "^1.1.3",
-    "hardhat-gas-reporter": "^1.0.8",
     "hardhat-preprocessor": "^0.1.5",
     "hardhat-tracer": "^1.1.0-rc.5",
     "husky": ">=6",
